Zootropolis - fix control bar alignments

--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -254,7 +254,7 @@ $hosted-video-height: 540px;
         }
     }
 
-    .vjs-play-control {
+    .vjs-play-control.vjs-control {
         width: 50px;
         height: 50px;
         margin: 12px 16px;
